# routes/index.js
@@ -9,4 +9,6 @@ router.get('/', (req, res) => {
 
 router.use('/products', require('./products'));
 
+router.use('/categories', require('./categories'));
+
 module.exports = router;
